RESOLVED FIXED119889
[WinCairo] Compile error.
https://bugs.webkit.org/show_bug.cgi?id=119889
Summary [WinCairo] Compile error.
peavo
Reported 2013-08-16 03:34:21 PDT
The file WebCore/platform/network/curl/ResourceHandleManager.cpp fails to compile.
Attachments
Patch (1.69 KB, patch)
2013-08-16 03:45 PDT, peavo
no flags
peavo
Comment 1 2013-08-16 03:45:53 PDT
Brent Fulgham
Comment 2 2013-08-16 08:17:37 PDT
Comment on attachment 208906 [details] Patch Sorry! My mistake. :-(
WebKit Commit Bot
Comment 3 2013-08-16 08:41:08 PDT
Comment on attachment 208906 [details] Patch Clearing flags on attachment: 208906 Committed r154182: <http://trac.webkit.org/changeset/154182>
WebKit Commit Bot
Comment 4 2013-08-16 08:41:09 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 5 2013-08-16 10:40:41 PDT
(In reply to comment #2) > (From update of attachment 208906 [details]) > Sorry! My mistake. :-( No worries, impossible to avoid mistakes altogether, thanks for reviewing :)
Note You need to log in before you can comment on or make changes to this bug.