<https://webkit.org/b/119889> [WinCairo] Compile error.

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-08-16
Reviewed by Brent Fulgham.

* platform/network/curl/ResourceHandleManager.cpp:
(WebCore::certificatePath): Use correct function name.

Canonical link: https://commits.webkit.org/137859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154182 268f45cc-cd09-0410-ab3c-d52691b4dbfc